--- a/Sicsoft.Checkin.Web/Pages/Shared/_NavbarPartial.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Shared/_NavbarPartial.cshtml
@@ -273,7 +273,34 @@
                             </ul>
                         </div>
                     </li>
+                     @{
+                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "45").FirstOrDefault()))
+                        {
+                            <li class="nav-item ">
+                                <a class="nav-link active" href="#" data-toggle="collapse" aria-expanded="false" data-target="#submenu-7" aria-controls="submenu-5"><i class="fas fa-clipboard-list"></i>Ofertas de Venta <span class="badge badge-success">6</span></a>
+                                <div id="submenu-7" class="collapse submenu" style="">
+                                    <ul class="nav flex-column">
 
+
+                                        <li class="nav-item">
+                                            @{
+                                                if (!string.IsNullOrEmpty(Roles.Where(a => a == "45").FirstOrDefault()))
+                                                {
+
+                                                    <a class="nav-link" asp-page="/OfertaVenta/Index">Oferta Venta</a>
+                                                }
+
+                                            }
+
+                                        </li>
+
+                                    </ul>
+                                </div>
+                            </li>
+                        }
+
+
+                    }
                     @{
                         if (!string.IsNullOrEmpty(Roles.Where(a => a == "43").FirstOrDefault()))
                         {
