--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Nuevo.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Nuevo.cshtml
@@ -3,6 +3,22 @@
 @{
     ViewData["Title"] = "Crear Llamada Servicio";
 }
+@using Microsoft.AspNetCore.Http
+@using System;
+@using System.Collections.Generic;
+@using System.IO;
+@using System.Linq;
+@using System.Security.Claims;
+@using System.Threading.Tasks;
+@using Microsoft.AspNetCore.Mvc;
+@using Microsoft.AspNetCore.Mvc.RazorPages;
+@using Microsoft.Extensions.Configuration;
+@using Refit;
+@using Sicsoft.Checkin.Web.Models;
+@inject IHttpContextAccessor httpContextAccessor
+@{
+    var Roles = ((ClaimsIdentity)User.Identity).Claims.Where(d => d.Type == "Roles").Select(s1 => s1.Value).FirstOrDefault().Split("|");
+}
 @section breadcrumb{
 
     <li class="breadcrumb-item">
@@ -576,7 +592,10 @@
 
             } else if (recibido1.Status == -1 || recibido1.Status == -3) {
                 if (recibido1.AdjuntosIdentificacion == [] || recibido1.AdjuntosIdentificacion.length == 0) {
-                    return false;
+                    var RolIdentificacion = "@(!string.IsNullOrEmpty(Roles.Where(a => a == "47").FirstOrDefault()))";
+                    if (RolIdentificacion != "False") {
+                        return false;
+                    }
                 }
             }
 
@@ -763,12 +782,21 @@
         });
         function onChangeStatus() {
             try {
-                if ($("#status").val() == -1 || $("#status").val() == -3) {
-                    $("#rowIdentificacion").show();
-                } else {
-                    $("#rowIdentificacion").hide();
+                var RolIdentificacion = "@(!string.IsNullOrEmpty(Roles.Where(a => a == "47").FirstOrDefault()))";
 
+                if (RolIdentificacion == "False") {
+                        $("#rowIdentificacion").hide();
+
+                } else {
+
+                    if ($("#status").val() == -1 || $("#status").val() == -3) {
+                        $("#rowIdentificacion").show();
+                    } else {
+                        $("#rowIdentificacion").hide();
+
+                    }
                 }
+
 
             } catch (e) {
                 Swal.fire({
@@ -851,22 +879,22 @@
 
                             console.log(json);
                             $("#productos").val('');
-                       
+
 
                             rellenaProductos(json);
-                      
+
 
                         },
 
                         beforeSend: function(xhr) {
 
-                            
+
                         },
                         complete: function() {
-                     
+
                         },
                         error: function(error) {
-                             
+
                         }
                     });
                 }
@@ -908,9 +936,9 @@
                     success: function(json) {
 
                         console.log(json);
-                         $("#divProcesando").modal("hide"); 
+                        $("#divProcesando").modal("hide");
                         rellenaProductos(json);
-                         $("#divProcesando").modal("hide");
+                        $("#divProcesando").modal("hide");
 
                         $("#divProcesando").modal("hide");
 
@@ -965,21 +993,21 @@
 
                             console.log(json);
                             $("#cardcode").val("");
-                             
+
                             rellenaClientes(json);
-                           
+
 
                         },
 
                         beforeSend: function(xhr) {
 
-                            
+
                         },
                         complete: function() {
-                            
+
                         },
                         error: function(error) {
-                          
+
                         }
                     });
                 }
@@ -1016,11 +1044,11 @@
                     success: function(json) {
 
                         console.log(json);
-                         $("#divProcesando").modal("hide");
+                        $("#divProcesando").modal("hide");
 
                         $("#divProcesando").modal("hide");
                         rellenaClientes(json);
-                         $("#divProcesando").modal("hide"); 
+                        $("#divProcesando").modal("hide");
                         $("#divProcesando").modal("hide");
 
                     },
