--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
@@ -339,13 +339,14 @@
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered first">
                         <thead>
-                            <tr>
-                                <th>ID</th>
+                            <tr> 
                                 <th>No. Llamada</th>
 
                                 <th>Cliente</th>
                                 <th>Item</th>
                                 <th>Asunto</th>
+                                <th>Sucursal</th>
+
                                 <th>Status</th>
 
                                 <th width="150">Acción</th>
@@ -355,16 +356,19 @@
                         <tbody>
                             @foreach (var item in Model.Objeto)
                             {
-                                <tr>
-                                    <td>@item.id</td>
+                                <tr> 
                                     <td>@item.DocEntry</td>
 
-                                    <td>@item.CardCode - @Model.Clientes.Clientes.Where(a => a.CardCode == item.CardCode).FirstOrDefault().CardName</td>
-                                    <td>@item.ItemCode - @item.SerieFabricante</td>
-                                    <td>@item.Asunto</td>
+                                    <td> @Model.Clientes.Clientes.Where(a => a.CardCode == item.CardCode).FirstOrDefault().CardName</td>
+                                    <td>@item.ItemCode - @item.SerieFabricante - @(
+                                    Model.Productos.Productos.Where(a => a.itemCode == item.ItemCode).FirstOrDefault() == null ? "" : Model.Productos.Productos.Where(a => a.itemCode == item.ItemCode).FirstOrDefault().itemName
+                                    )</td>
+                                    <td>@item.Asunto </td>
                                     @{
                                         var status = item.Status.ToString();
                                     }
+                                    <td>@(Model.Sucursales.Where(a => a.id == item.SucRetiro).FirstOrDefault() == null ? "" : Model.Sucursales.Where(a => a.id == item.SucRetiro).FirstOrDefault().Nombre) </td>
+
                                     <td>@(Model.Status.Where(a => a.idSAP == status).FirstOrDefault() == null ? "" : Model.Status.Where(a => a.idSAP == status).FirstOrDefault().Nombre) </td>
 
                                     <td>
@@ -386,8 +390,7 @@
 
                         </tbody>
                         <tfoot>
-                            <tr>
-                                <th>ID</th>
+                            <tr> 
                                 <th>No. Llamada</th>
 
 
@@ -395,6 +398,7 @@
                                 <th>Item</th>
                                 <th>Asunto</th>
                                 <th>Status</th>
+                                <th>Sucursal</th>
 
                                 <th>Acción</th>
 
